apps/authentik/middleware-forwarded-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-https
  namespace: authentik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
